# Astar_NFT

./: package.json  swanky.config.json
.devcontainer/: devcontainer.json
artifacts/: nft.contract  nft.json
artifacts/nft/1683582447322/testReports/1683585114147/: mochawesome.html
artifacts/nft/1683582447322/testReports/1683587517006/: mochawesome.html
artifacts/nft/1683582447322/testReports/1683587642213/: mochawesome.html
artifacts/nft/1683926406027/: nft.contract
contracts/Nft/src/: lib.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
frontend/mint-app/: package-lock.json  package.json
frontend/mint-app/src/: App.js  connectButton.js  index.js  mint.js
logics/: Cargo.toml  lib.rs
logics/impls/payable_mint/: mod.rs  payable_mint.rs  types.rs
logics/traits/: payable_mint.rs
test/nft/: index.test.ts
test/nft/artifacts/: nft.json
test/nft/typedContract/build-extrinsic/: nft.ts
test/nft/typedContract/constructors/: nft.ts
test/nft/typedContract/contract-info/: nft.ts
test/nft/typedContract/data/: nft.json
test/nft/typedContract/mixed-methods/: nft.ts
test/nft/typedContract/query/: nft.ts
test/nft/typedContract/tx-sign-and-send/: nft.ts
test/nft/typedContract/types-arguments/: nft.ts
test/nft/typedContract/types-returns/: nft.ts
