[package]
name = "nft"
version = "1.0.0"
authors = ["Astar builder"]
edition = "2021"

[dependencies]
ink = { version ="4.2.0", default-features = false}

secp256k1 = { version = "0.21", features = ["std"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", features = ["derive"] }

openbrush = { tag = "3.1.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp34", "ownable", "reentrancy_guard"] }
payable_mint_pkg = { path = "../../logics", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "openbrush/std",
    "payable_mint_pkg/std",
]
ink-as-dependency = []

